<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginPage">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F2D7D5 "
    android:orientation="vertical"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/white"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="32sp"
            android:text="@string/login_welcome"
            />
        <ImageView
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_weight="1"
            android:src="@color/black"
            />
    </LinearLayout>
    <EditText
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/enter_email"/>
    <EditText
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/enter_password"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:text="@string/forget_password"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_btn" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/signup_link"/>
</LinearLayout>

</RelativeLayout>